<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>kalva.learnings.maven</groupId>
    <artifactId>maven-test</artifactId>
    <version>1.0.15-SNAPSHOT</version>

    <properties>
        <install.dir>/opt/kalva/maven-test</install.dir>
        <jvmArguments>
            -Xms124m -Xmx256m -XX:+AggressiveOpts -XX:MaxMetaspaceSize=256m
            -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=70
            -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark
            -XX:+UseFastAccessorMethods
            -XX:+HeapDumpOnOutOfMemoryError
            -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9001
            -Dcom.sun.management.jmxremote.ssl=false
            -Dcom.sun.management.jmxremote.local.only=false
            -Dcom.sun.management.jmxremote.authenticate=false
            -Xnoagent -Djava.compiler=NONE -Xdebug
            -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5001
        </jvmArguments>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>2.0.0</version>
                <configuration>
                    <includeConfigurationDirectoryInClasspath>true
                    </includeConfigurationDirectoryInClasspath>
                    <configurationDirectory>
                        ${install.dir}
                    </configurationDirectory>
                    <target>${project.build.directory}/appassembler</target>
                    <generateRepository>true</generateRepository>
                    <repositoryLayout>flat</repositoryLayout>
                    <repositoryName>lib</repositoryName>
                    <programs>
                        <program>
                            <mainClass>kalva.learnings.maven.MavenTest</mainClass>
                            <id>MavenTest</id>
                        </program>
                    </programs>
                    <platforms>
                        <platform>all</platform>
                    </platforms>
                    <extraJvmArguments>${jvmArguments}</extraJvmArguments>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-command-line</id>
                        <phase>package</phase>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>jdeb</artifactId>
                <groupId>org.vafer</groupId>
                <executions>
                    <execution>
                        <id>MavenTest</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jdeb</goal>
                        </goals>
                        <configuration>
                            <installDir>${install.dir}</installDir>
                            <controlDir>src/deb</controlDir>
                            <deb>${project.build.directory}/maven-test-${project.version}.deb</deb>
                            <dataSet>
                                <data>
                                    <src>target/appassembler</src>
                                    <type>directory</type>
                                    <mapper>
                                        <type>perm</type>
                                        <prefix>${install.dir}</prefix>
                                        <filemode>755</filemode>
                                    </mapper>
                                </data>
                            </dataSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <goals>pre-integration-test</goals>
                    <remoteTagging>false</remoteTagging>
                    <preparationGoals>package</preparationGoals>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <tag>HEAD</tag>
        <url>https://github.com/skalva404/maven-test.git</url>
        <connection>scm:git:https://github.com/skalva404/maven-test.git</connection>
        <developerConnection>scm:git:https://github.com/skalva404/maven-test.git</developerConnection>
    </scm>

    <repositories>
        <repository>
            <id>myMavenRepo.read</id>
            <url>https://mymavenrepo.com/repo/nAlslojMB5Wg1dnRZma6/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>myMavenRepo.write</id>
            <url>https://mymavenrepo.com/repo/kfG1boDXh7NgLkDxxoR3/</url>
        </repository>
    </distributionManagement>

    <!--<distributionManagement>-->
    <!--<repository>-->
    <!--<id>nexus-releases</id>-->
    <!--<name>nexus-releases</name>-->
    <!--<url>http://localhost:8081/nexus/content/repositories/maven-test/</url>-->
    <!--</repository>-->
    <!--</distributionManagement>-->
</project>
